--- a/pom.xml
+++ b/pom.xml
@@ -244,8 +244,13 @@
         <dependency>
             <groupId>com.google.javascript</groupId>
             <artifactId>closure-compiler</artifactId>
-            <version>v20140625</version>
+            <version>rr2079.1</version>
             <optional>true</optional>
+        </dependency>
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>1.3.2</version>
         </dependency>
     </dependencies>
 
@@ -311,9 +316,8 @@
 
     <properties>
         <github.global.server>github</github.global.server>
-        <maven.compiler.source>1.7</maven.compiler.source>
-        <maven.compiler.target>1.7</maven.compiler.target>
         <maven.plugin.version>3.3</maven.plugin.version>
         <skipTests>true</skipTests>
+        <jdkVersion>1.6</jdkVersion>
     </properties>
 </project>
