--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 
     <groupId>com.samaxes.maven</groupId>
     <artifactId>minify-maven-plugin</artifactId>
-    <version>1.7.4.atlassian.2</version>
+    <version>1.7.4-SNAPSHOT</version>
     <packaging>maven-plugin</packaging>
 
     <name>Minify Maven Plugin</name>
@@ -60,7 +60,7 @@
         <connection>scm:git:git://github.com/atlassian/minify-maven-plugin.git</connection>
         <developerConnection>scm:git:git@github.com:atlassian/minify-maven-plugin.git</developerConnection>
         <url>https://github.com/atlassian/minify-maven-plugin</url>
-      <tag>minify-maven-plugin-1.7.4.atlassian.2</tag>
+      <tag>HEAD</tag>
   </scm>
 
     <prerequisites>
